# learn-rust-step002-database

./: .gitignore  Cargo.toml  README.md  START - MANGER (no-exit).bat  START - MANGER.bat  START(old).bat  build.rs  deno.jsonc
.cargo/: config.toml
.github/workflows/: manual_verify.yml  manual_verify_cli.yml
.unotes/: unotes_meta.json
batch/: test_antro.xml
cmd/: README.md  plotFS.md  plotFS.ps1
config/: config.toml
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs/editor/: all.html  fn.main.html  fn.run_editor_loop.html  fn.run_editor_setup.html  index.html  sidebar-items.js
docs/manager/: all.html  fn.main.html  fn.run_manager_loop.html  index.html  sidebar-items.js
docs/my_libs/: all.html  index.html  sidebar-items.js
docs/my_libs/api/: index.html
docs/my_libs/config/: index.html  sidebar-items.js  struct.ConfigManager.html  struct.CurrentState.html  struct.DataIndex.html  struct.GlobalConfig.html
docs/my_libs/consts/: constant.CONFIG_FILE.html  constant.CONFIG_FOLDER.html  constant.DATA_FOLDER.html  constant.DATA_INDEX_FILE.html  constant.DB_NAME.html  constant.DB_NAMESPACE.html  constant.STATE_FILE.html  index.html  sidebar-items.js
docs/my_libs/db/: index.html  (+1 more)
docs/search.index/: 00271ebcc382.js  05585feeb752.js  0cec93a6edaf.js  112d65477f18.js  1201a721050d.js  186ccd0f277d.js  1da8414e9d01.js  2120ebcceb28.js  33c79c1431a0.js  3c0e49f75bea.js  45fb04ea130a.js  4dbcd7a9c94e.js  55a0d81dc7ea.js  6142f033bd57.js  7b525296c881.js  root.js
src/: consts.rs  lib.rs  utils.rs
src-deno/: deno.json  dev.ts  index.html
src-deno/src/: main.ts
src-rust/: Cargo.toml
src-tauri/: Cargo.toml
src/api/: model.rs
src/config/: mod.rs
src/db/: connect.rs  mod.rs  read.rs
src/domain/: antroponim.rs  mod.rs
src/ui/: mod.rs
ui/: appwindow.slint
(+82 files in other folders)
