[package]
edition = "2021"
rust-version = "1.92.0"
name = "lekcja002-cli"
description = "Nauka Rusta"
version = "0.1.0"
authors = ["Cisowski Jan Roman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519

# [lib]
# name = "lekcja002_cli_lib" 
# path = "src/lib.rs"

[[bin]]
name = "lekcja002-cli1" 
path = "src/bin/cli1.rs"

[dependencies]
crossterm = "0.29.0"
