[package]
edition = "2021"
rust-version = "1.92.0"
name = "lekcja002-gui"
description = "Nauka Rusta"
version = "0.1.0"
authors = ["Cisowski Jan Roman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519

[lib]
name = "lekcja002_gui_lib" 
# path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lekcja002-gui" 
path = "src/main.rs"

# [package.metadata.tauri]
# config-path = "tauri.conf.json"

# [build-dependencies]
# tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# lekcja002_cli_lib = { path = "../src-rust", package = "lekcja002_cli_lib" }
# tauri = { version = "2.9.1", features = [] }
# tauri-plugin-log = "2"
# tauri-plugin-opener = "2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1"
# log = "0.4"
